--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This a repository of a few scrambling and character Replacement algorithms in C++
+This a repository of a few scrambling and character Replacement algorithms in C++ I made when I was a wee 13-14 yo teen. 
 Below, are details for each file:
 
 Scramble.cpp - a demonstration of a very simple scrambling algorithm.
